--- a/笔记.md
+++ b/笔记.md
@@ -47,3 +47,8 @@ python get-pip.py
 ssh-keygen -t rsa -C "email"
 ```
 
+### 查看sh脚本所消耗的内存以及时间占用率
+
+```shell
+$ /usr/bin/time -v sh -c 'stress -m 1 --vm-bytes 512m --vm-keep --timeout 1'
+```
