--- a/笔记.md
+++ b/笔记.md
@@ -19,6 +19,18 @@ git config --global user.email "your_email@youremail.com"
 git config --global core.editor vi 
 ```
 
+### git 查看远程仓库
+
+~~~shell
+git remote -v
+~~~
+
+### Gerrit 添加远程仓库
+
+~~~shell
+git remote add gerrit link(仓库链接)
+~~~
+
 ### horizon 静态文件设置
 
 ````python
