--- a/DilyNote/笔记.md
+++ b/DilyNote/笔记.md
@@ -64,3 +64,10 @@ ssh-keygen -t rsa -C "email"
 ```shell
 $ /usr/bin/time -v sh -c 'stress -m 1 --vm-bytes 512m --vm-keep --timeout 1'
 ```
+
+### 以root用户进入docker
+
+```shell
+docker exec -it -u root 
+```
+
